frontend/src/components/CurrentUserBookingsReviews/CurrentUserBookingsReviews.css
.account-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 75px;
}

/* .account-wrapper-top {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 75px;
} */

.account-wrapper h1 {
    font-size: 45px;
    margin: 25px 0 25px 0;
    border-bottom: 2.5px solid rgb(164, 126, 78);
}

.account-spot-card {
    margin: 5px 0 10px 0;
}

.account-spot-card-image {
    border-radius: 25px;
    width: 750px;
    height: 420px;
}

.account-spot-card-name {
    font-size: 30px;
    margin-bottom: 10px;
}

.account-wrapper-bottom {
    display: flex;
    flex-direction: row;
    justify-content: center;
    /* max-width: 880px */
}

.account-wrapper-bottom-reviews {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    padding-bottom: 50px;
}

/* .account-wrapper-bottom-reviews>div {

} */

.account-review-card {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    border: 1px solid rgb(164, 126, 78);
    box-shadow: 1px 1px 0px rgb(164, 126, 78);
    border-radius: 15px;
    margin: 25px 25px 25px 25px;
    padding: 10px 10px 10px 10px;
    gap: 5px;
    width: 300px;
    height: 150px;
}

.account-review-card-description {
    overflow-x: hidden;
    overflow-y: auto;
    color: rgb(164, 126, 78);
    scrollbar-color: rgb(164, 126, 78);
}

/* ::-webkit-scrollbar:thu {
    color: rgb(164, 126, 78);
    scrollbar-color: rgb(164, 126, 78);
} */

.account-review-card-link {
    font-weight: bold;
}

